# Nova

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  README.md  ROADMAP.md  Roadmap.md  build.rs
.github/workflows/: release.yml
docs/: 00-overview.md  01-startup.md  UI_SETTINGS.md  architecture.md
src/: app.rs  audio.rs  constants.rs  cpu.rs  debug.rs  display.rs  fonts.rs  gamepad.rs  i18n.rs  keypad.rs  main.rs  memory.rs  types.rs  utils.rs
src/debug/: i18n.rs
src/debug/i18n/: ar.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
src/i18n/: ar.json  common.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
src/ui/: bottom_bar.rs  debug_terminal.rs  main_panel.rs  mod.rs  settings.rs  top_bar.rs
