[package]
name = "Oxide"
version = "0.92.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
rand = "0.8"
once_cell = "1.21.3"
serde_json = "1"
rfd = "0.15"
gilrs = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
rodio = "0.20"
chrono = { version = "0.4", features = ["clock"] }
zip = "0.6"
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_Globalization"] }

[build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["ico"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
